syntax = "proto3";

package debondingdelegation;
option go_package = "github.com/figment-networks/oasis-rpc-proxy/grpc/debondingdelegation/debondingdelegationpb";

message DebondingDelegationEntry {
    map<string, DebondingDelegationInnerEntry> entries = 1;
}

message DebondingDelegationInnerEntry {
    repeated DebondingDelegation debondingDelegations = 1;
}

message DebondingDelegation {
    bytes shares = 1;
    uint64 DebondEndTime = 2;
}

message GetByPublicKeyRequest {
    string public_key = 1;
    int64 height = 2;
}

message GetByPublicKeyResponse {
    map<string, DebondingDelegationInnerEntry> debonding_delegations = 1;
}

service DebondingDelegationService {
    rpc GetByPublicKey (GetByPublicKeyRequest) returns (GetByPublicKeyResponse) {};
}